// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transform > basic 1`] = `
"\\"use strict\\";
(() => {
  // tests/fixtures/basic.ts
  var expected = \\"expected\\";
})();"
`;

exports[`transform > virtual module 1`] = `
"\\"use strict\\";
(() => {
  // vmodule:/vmodule/foo
  var expected = \\"expected\\";
})();"
`;
